--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Landing Page"
+title: "Welcome to openbook"
 ---
 
-Some introduction text. Lists out all the headings from h1 to h6. Easy to customise. Some more text. Additional text.
+We are very happy to have you here.
 
 # Heading H1
 Heading 1 text
